// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
}

.emotion-1 strong,
.emotion-1 b {
  font-weight: 700;
}

.emotion-2 {
  font-size: 13px;
}

.emotion-2:last-of-type {
  color: #1C2D38;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover:not(:last-of-type),
.emotion-2:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-4 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
}

.emotion-4:focus {
  outline: none;
}

.emotion-5 {
  position: relative;
}

.emotion-5::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-5::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-5::after {
  background-color: #E8EDEB;
}

.emotion-6 {
  cursor: default;
}

.emotion-6:last-of-type {
  color: #1C2D38;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9>code {
  color: #016BF8;
}

.emotion-9::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-9:focus .emotion-9::after {
  background-color: #0498EC;
}

.emotion-9:hover::after {
  background-color: #E8EDEB;
}

.emotion-9:last-of-type {
  color: #1C2D38;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover:not(:last-of-type),
.emotion-9:focus:not(:last-of-type) {
  color: #1C2D38;
}

<p
    class="emotion-0 emotion-1"
  >
    <a
      class="constant-classname emotion-2 emotion-3 emotion-4"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-5"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-6 emotion-7"
    >
       → 
    </span>
    <a
      class="emotion-3 emotion-9 emotion-10"
      href="/view-analyze/"
    >
      View & Analyze Data
    </a>
  </p>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
}

.emotion-1 strong,
.emotion-1 b {
  font-weight: 700;
}

.emotion-2 {
  font-size: 13px;
}

.emotion-2:last-of-type {
  color: #1C2D38;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover:not(:last-of-type),
.emotion-2:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-4 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
}

.emotion-4:focus {
  outline: none;
}

.emotion-5 {
  position: relative;
}

.emotion-5::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-5::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-5::after {
  background-color: #E8EDEB;
}

.emotion-6 {
  cursor: default;
}

.emotion-6:last-of-type {
  color: #1C2D38;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9>code {
  color: #016BF8;
}

.emotion-9::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-9:focus .emotion-9::after {
  background-color: #0498EC;
}

.emotion-9:hover::after {
  background-color: #E8EDEB;
}

.emotion-9:last-of-type {
  color: #1C2D38;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover:not(:last-of-type),
.emotion-9:focus:not(:last-of-type) {
  color: #1C2D38;
}

<p
    class="emotion-0 emotion-1"
  >
    <a
      class="constant-classname emotion-2 emotion-3 emotion-4"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-5"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-6 emotion-7"
    >
       → 
    </span>
    <a
      class="emotion-3 emotion-9 emotion-10"
      href="/"
    >
      MongoDB Compass
    </a>
  </p>
</DocumentFragment>
`;
